add options for deletion of old logfiles feature

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -70,3 +70,14 @@ emailInterval=240
 
 # specify the filename for the zip archive that will be emailed to you
 zipArchiveName=logzip.zip
+
+[logmaintenance]
+
+# Set to True to enable automatic deletion of old logs
+deleteOldLogs=False
+
+# Set to the maximum age of the logs that you want to keep, in days. Logs older than this will be deleted. (default of 2 days)
+maxLogAge=2.0
+
+# Set to the frequency of checking for and deleting logs older than maxLogAge, in hours. (default 2 hours)
+ageCheckInterval=2
