update comment at top with control key combo

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -1,5 +1,5 @@
 # It is strongly recommended to avoid editing this file directly. Use the control panel instead.
-# To bring up the control panel, press the F12 key while pykeylogger is running.
+# To bring up the control panel, press the "control key combo" while pykeylogger is running.
 # Default master password is blank, so just press enter at the password prompt.
 
 [General]
