update main keylogger control thread to start variable number of event threads create an explicit hook mouse config option.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -15,8 +15,12 @@ Log Directory Tooltip = Set to the full path of directory where you want logs to
 Log Directory = logs
 
 # default: True
-Hook Keyboard Tooltip = Log keyboard input (if you set this to False, the keylogger will basically do nothing).
+Hook Keyboard Tooltip = Log keyboard input (don't set this to False).
 Hook Keyboard = True
+
+# default: True
+Hook Mouse Tooltip = Log mouse input. You can set this to False if you are not running any mouse-based logging, such as, on-click screen captures.
+Hook Mouse = True
 
 # default: Control_L;Control_R;F12
 Control Key Tooltip = Specify the key combo to press to bring up control panel. Separate multiple keys of the combo with semicolon ";". Some good keys to include are [On Windows: "Lmenu", "Rmenu" (left and right Alt keys), "Lcontrol", "Rcontrol", "Lshift", "Rshift"] [On Linux: "Alt_L", "Alt_R" (left and right Alt keys), "Control_L", "Control_R", "Shift_L", "Shift_R", "Super_L", "Super_R" (left and right meta/windows keys)] [On Both: "Escape", "Delete", "Insert", "F1" through "F12", any number of regular alphanumeric keys (can't use the semicolon as one of the keys).] Make it as complex as you want - just make sure you have enough fingers. :)
