a few changes here and there: change click image setting names to be more logical add customizable click image filename setting add validator for click image filenames make zipper filename filter more specific, so that images are also taken in.

--- a/pykeylogger.ini
+++ b/pykeylogger.ini
@@ -247,21 +247,24 @@ Log Subdirectory = click_images
 Log Filename Tooltip = Log all output to the file (filename specified here) inside directory specified with "Log Subdirectory".
 Log Filename = logfile.txt
 
-# default: 150
-Capture Clicks Width Tooltip = Specify the width (in pixels) for the captured image around the mouse cursor. The coordinates of the mouse cursor during the click are the center of the image. Note that the larger the area you want to capture, the more disk space this will take.
-Capture Clicks Width = 150
+Click Image Filename Tooltip = Specify filename pattern for the click images. The following variables are interpreted: \n %time% inserts a date/time string of the format "YYYYMMDD_HHMMSS_microsecond". This must be included to assure uniqueness of the filename.\n%processname% inserts the process name that received the click\n%username% inserts the username of the user that generated the click. \nThe file extension is based on the Click Image Format setting.
+Click Image Filename = %time%_%processname%_%username%
 
 # default: 150
-Capture Clicks Height Tooltip = Specify the height (in pixels) for the captured image around the mouse cursor. The coordinates of the mouse cursor during the click are the center of the image. Note that the larger the area you want to capture, the more disk space this will take.
-Capture Clicks Height = 150
+Click Image Width Tooltip = Specify the width (in pixels) for the captured image around the mouse cursor. The coordinates of the mouse cursor during the click are the center of the image. Note that the larger the area you want to capture, the more disk space this will take.
+Click Image Width = 150
+
+# default: 150
+Click Image Height Tooltip = Specify the height (in pixels) for the captured image around the mouse cursor. The coordinates of the mouse cursor during the click are the center of the image. Note that the larger the area you want to capture, the more disk space this will take.
+Click Image Height = 150
 
 # default: png
-Capture Clicks Image Format Tooltip = Specify the file format of the images captured on click. The following formats are supported: png, jpg, bmp, gif, pcx, ppm, pgm, pbm, tiff, xbm.
-Capture Clicks Image Format = png
+Click Image Format Tooltip = Specify the file format of the images captured on click. The following formats are supported: png, jpg, bmp, gif, pcx, ppm, pgm, pbm, tiff, xbm.
+Click Image Format = png
 
 # default: 75
-Capture Clicks Image Quality Tooltip = Specify the image file quality of the images captured on click. This option only applies to the JPG file format. Specify a value from 1 to 100 (100 being completely uncompressed).
-Capture Clicks Image Quality = 75
+Click Image Quality Tooltip = Specify the image file quality of the images captured on click. This option only applies to the JPG file format. Specify a value from 1 to 100 (100 being completely uncompressed).
+Click Image Quality = 75
 
 [[E-mail]]
 
